--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,7 @@
 service: fast-api
-runtime: python310
+runtime: python
 entrypoint: gunicorn -k uvicorn.workers.UvicornWorker main:app
+
+runtime_config:
+    operating_system: "ubuntu22"
+    runtime_version: "3.10"
