--- a/app-fast-api.yaml
+++ b/app-fast-api.yaml
@@ -1,5 +1,5 @@
 service: fast-api
-runtime: python
+runtime: python310
 entrypoint: gunicorn -k uvicorn.workers.UvicornWorker main:app
 
 runtime_config:
