--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 service: default
-runtime: python
+runtime: python310
 entrypoint: gunicorn -k uvicorn.workers.UvicornWorker main:app
 
 runtime_config:
